--- a/style.css
+++ b/style.css
@@ -7,11 +7,12 @@ h1 {
 	font-size: 50px;
 }
 
+
 .orange-color {
 	color: orange;
 }
 
-section {
+.flexiable-container {
 	display: flex;
 	margin-bottom: 100px;
 }
@@ -43,4 +44,36 @@ section {
 	background-image: url(/images/dream-bg.png);
 	background-repeat: no-repeat;
 	background-position: right;
+}
+
+.experience-area {
+	background-image: url(/images/exp-bg.png);
+	background-repeat: no-repeat;
+	background-position-y: 80%;
+}
+
+.experience-items {
+	width: 40%;
+	margin-left: 5%;
+	margin-right: 5%;
+	padding: 20px;
+	border-radius: 10px;
+	box-shadow: 10px 10px 40px gray;
+}
+
+.experience-items h2 {
+	font-size: 30px;
+}
+
+
+#web-dev-experience {
+	border-left: 7px solid;
+	border-image: linear-gradient(blue, cyan);
+	border-image-slice: 1;
+}
+
+#full-stack-experience {
+	border-left: 7px solid;
+	border-image: linear-gradient(rgb(180, 27, 0), rgb(255, 132, 119));
+	border-image-slice: 1;
 }
