--- a/style.css
+++ b/style.css
@@ -77,3 +77,8 @@ h1 {
 	border-image: linear-gradient(rgb(180, 27, 0), rgb(255, 132, 119));
 	border-image-slice: 1;
 }
+
+footer p {
+	text-align: center;
+	color: rgb(146, 146, 146);
+}
